# apue

./: CMakeLists.txt  Make.defines.macos  README.md  figB.1
advio/: devzero  mcopy  nonblockw  pendlock
call/: call
calld/: calld
db/: t4
environ/: doatexit  testjmp.opt
exercises/: getlogin  getpw44bsd  goodexit  sizepipe
file/: access  cdpwd  changemod  devrdev  fileflags  filetype  ftw4  hello  hole  longpath  ls1  mycd  umask  unlink  zap
include/: apue.h
intro/: a.out  copy.0  copy.c  dir.c  fget.c  test.c
ipc/: add2  add2stdio  fifo1  myuclc  pipe1  pipe2  pipe4  popen1  popen2  spipe4  tshm
ipp/: print  printd
lock/: deadlock  mandatory
mycat/: fgetsfputs  getcputc  mycat
open/: openclient
open.fe/: openclient
opend/: opend.poll  opend.select
opend.fe/: opend
proc/: exec1  exec2  fork1  fork2  pracct  shell1  shell2  systest1  systest2  systest3  tellwait1  tellwait2  test1  times1  vfork1  vfork3  wait1  zombie
pty/: pty
sess/: orphan3
signals/: critical  mask  read1  read2  reenter  sigtstp  sigusr  suspend1  suspend2  tsleep2
sockets/: bindunix  findsvc  ruptime  ruptime-dg  ruptimed  ruptimed-dg  ruptimed-fd
std/: conf  options
stdio/: buf  tempfiles  tempnam
termios/: csize  settty  t_getpass  t_isatty  t_raw  t_ttyname  winch
threadctl/: atfork  suspend  timeout
threads/: badexit2  cleanup  exitstatus  threadid
