cmake_minimum_required(VERSION 3.6)
project(apue)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        advio/catgetmsg.c
        advio/devzero
        advio/devzero.c
        advio/freebsd.mk
        advio/linux.mk
        advio/macos.mk
        advio/mcopy
        advio/mcopy.c
        advio/nonblockw
        advio/nonblockw.c
        advio/pendlock
        advio/pendlock.c
        advio/solaris.mk
        call/call
        call/call.c
        call/call.h
        call/call.o
        call/escape.c
        call/escape.o
        call/freebsd.mk
        call/linux.mk
        call/loop.poll.c
        call/loop.poll.o
        call/macos.mk
        call/main.c
        call/main.o
        call/put.c
        call/put.o
        call/solaris.mk
        call/take.c
        call/take.o
        call/takeput.c
        call/takeput.o
        calld/calld
        calld/calld.h
        calld/childdial.c
        calld/childdial.o
        calld/cliargs.c
        calld/cliargs.o
        calld/client.c
        calld/client.o
        calld/ctlstr.c
        calld/ctlstr.o
        calld/debug.c
        calld/debug.o
        calld/devfile.c
        calld/devfile.o
        calld/dialfile.c
        calld/dialfile.o
        calld/expectstr.c
        calld/expectstr.o
        calld/freebsd.mk
        calld/linux.mk
        calld/lock.c
        calld/lock.o
        calld/loop.c
        calld/loop.o
        calld/macos.mk
        calld/main.c
        calld/main.o
        calld/request.c
        calld/request.o
        calld/sendstr.c
        calld/sendstr.o
        calld/sigchld.c
        calld/sigchld.o
        calld/solaris.mk
        calld/sysfile.c
        calld/sysfile.o
        calld/ttydial.c
        calld/ttydial.o
        calld/ttyopen.c
        calld/ttyopen.o
        cmake-build-debug/apue_2e.cbp
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Makefile
        daemons/freebsd.mk
        daemons/init.c
        daemons/init.o
        daemons/linux.mk
        daemons/lockfile.c
        daemons/lockfile.o
        daemons/macos.mk
        daemons/reread.c
        daemons/reread.o
        daemons/reread2.c
        daemons/reread2.o
        daemons/single.c
        daemons/single.o
        daemons/solaris.mk
        datafiles/freebsd.mk
        datafiles/getpwnam.c
        datafiles/getpwnam.o
        datafiles/linux.mk
        datafiles/macos.mk
        datafiles/solaris.mk
        db/apue_db.h
        db/db.c
        db/db.o
        db/freebsd.mk
        db/libapue_db.a
        db/linux.mk
        db/macos.mk
        db/solaris.mk
        db/t4
        db/t4.c
        db/t4.o
        environ/cmd1.c
        environ/cmd2.c
        environ/doatexit
        environ/doatexit.c
        environ/freebsd.mk
        environ/getrlimit.c
        environ/hello1.c
        environ/linux.mk
        environ/macos.mk
        environ/opendata.c
        environ/solaris.mk
        environ/testjmp
        environ/testjmp.c
        environ/testjmp.opt
        exercises/asyncsocket.c
        exercises/asyncsocket.o
        exercises/freebsd.mk
        exercises/getlogin
        exercises/getlogin.c
        exercises/getpw44bsd
        exercises/getpw44bsd.c
        exercises/getpwsvr4.c
        exercises/goodexit
        exercises/goodexit.c
        exercises/goodexit.o
        exercises/linux.mk
        exercises/macos.mk
        exercises/openmax.c
        exercises/openmax.o
        exercises/prtime.c
        exercises/sizepipe
        exercises/sizepipe.c
        exercises/sleep.c
        exercises/sleep.o
        exercises/sleepus_poll.c
        exercises/sleepus_poll.o
        exercises/sleepus_select.c
        exercises/sleepus_select.o
        exercises/solaris.mk
        file/access
        file/access.c
        file/cdpwd
        file/cdpwd.c
        file/changemod
        file/changemod.c
        file/devrdev
        file/devrdev.c
        file/fileflags
        file/fileflags.c
        file/filetype
        file/filetype.c
        file/freebsd.mk
        file/ftw4
        file/ftw4.c
        file/hello
        file/hello.c
        file/hole
        file/hole.c
        file/linux.mk
        file/longpath
        file/longpath.c
        file/ls1
        file/ls1.c
        file/macos.mk
        file/mycd
        file/mycd.c
        file/seek
        file/seek.c
        file/solaris.mk
        file/testerror
        file/testerror.c
        file/uidgid
        file/uidgid.c
        file/umask
        file/umask.c
        file/unlink
        file/unlink.c
        file/zap
        file/zap.c
        include/apue.h
        intro/test.c
        ipc/add2
        ipc/add2.c
        ipc/add2stdio
        ipc/add2stdio.c
        ipc/fifo1
        ipc/fifo1.c
        ipc/freebsd.mk
        ipc/linux.mk
        ipc/macos.mk
        ipc/myuclc
        ipc/myuclc.c
        ipc/pipe1
        ipc/pipe1.c
        ipc/pipe2
        ipc/pipe2.c
        ipc/pipe4
        ipc/pipe4.c
        ipc/popen1
        ipc/popen1.c
        ipc/popen2
        ipc/popen2.c
        ipc/solaris.mk
        ipc/spipe4
        ipc/spipe4.c
        ipc/tellwait.c
        ipc/tellwait.o
        ipc/tshm
        ipc/tshm.c
        ipp/freebsd.mk
        ipp/ipp.h
        ipp/linux.mk
        ipp/macos.mk
        ipp/print
        ipp/print.c
        ipp/print.h
        ipp/print.o
        ipp/printd
        ipp/printd.c
        ipp/printd.o
        ipp/solaris.mk
        ipp/util.c
        ipp/util.o
        lib/bsd_ptyopen.c
        lib/bufargs.c
        lib/bufargs.o
        lib/cliconn.c
        lib/cliconn.o
        lib/clrfl.c
        lib/clrfl.o
        lib/daemonize.c
        lib/daemonize.o
        lib/error.c
        lib/error.o
        lib/errorlog.c
        lib/errorlog.o
        lib/freebsd.mk
        lib/libapue.a
        lib/linux.mk
        lib/linux_ptyopen.c
        lib/lockreg.c
        lib/lockreg.o
        lib/locktest.c
        lib/locktest.o
        lib/macos.mk
        lib/nspipe.c
        lib/openmax.c
        lib/openmax.o
        lib/pathalloc.c
        lib/pathalloc.o
        lib/popen.c
        lib/popen.o
        lib/prexit.c
        lib/prexit.o
        lib/prmask.c
        lib/prmask.o
        lib/ptyfork.c
        lib/ptyfork.o
        lib/ptyopen.c
        lib/ptyopen.o
        lib/readn.c
        lib/readn.o
        lib/recvfd.c
        lib/recvfd.o
        lib/semaph.c
        lib/senderr.c
        lib/senderr.o
        lib/sendfd.c
        lib/sendfd.o
        lib/servaccept.c
        lib/servaccept.o
        lib/servlisten.c
        lib/servlisten.o
        lib/setfl.c
        lib/setfl.o
        lib/signal.c
        lib/signal.o
        lib/signalintr.c
        lib/signalintr.o
        lib/sleep.c
        lib/sleepus.c
        lib/sleepus.o
        lib/solaris.mk
        lib/spipe.c
        lib/spipe.o
        lib/tellwait.c
        lib/tellwait.o
        lib/ttymodes.c
        lib/ttymodes.o
        lib/writen.c
        lib/writen.o
        lock/deadlock
        lock/deadlock.c
        lock/freebsd.mk
        lock/linux.mk
        lock/macos.mk
        lock/mandatory
        lock/mandatory.c
        lock/solaris.mk
        mycat/fgetsfputs
        mycat/fgetsfputs.c
        mycat/freebsd.mk
        mycat/getcputc
        mycat/getcputc.c
        mycat/linux.mk
        mycat/macos.mk
        mycat/mycat
        mycat/mycat.c
        mycat/solaris.mk
        open/freebsd.mk
        open/linux.mk
        open/macos.mk
        open/main.o
        open/open.c
        open/open.h
        open/open.o
        open/openclient
        open/solaris.mk
        open.fe/freebsd.mk
        open.fe/linux.mk
        open.fe/macos.mk
        open.fe/main.c
        open.fe/main.o
        open.fe/open.c
        open.fe/open.h
        open.fe/open.o
        open.fe/openclient
        open.fe/solaris.mk
        opend/cliargs.o
        opend/client.c
        opend/client.o
        opend/freebsd.mk
        opend/linux.mk
        opend/loop.poll.c
        opend/loop.poll.o
        opend/loop.select.c
        opend/loop.select.o
        opend/macos.mk
        opend/main.c
        opend/main.o
        opend/opend.h
        opend/opend.poll
        opend/opend.select
        opend/request.c
        opend/request.o
        opend/solaris.mk
        opend.fe/cliargs.c
        opend.fe/cliargs.o
        opend.fe/freebsd.mk
        opend.fe/linux.mk
        opend.fe/macos.mk
        opend.fe/main.c
        opend.fe/main.o
        opend.fe/opend
        opend.fe/opend.h
        opend.fe/request.c
        opend.fe/request.o
        opend.fe/solaris.mk
        proc/awkexample
        proc/echoall
        proc/echoall.c
        proc/echoarg
        proc/echoarg.c
        proc/exec1
        proc/exec1.c
        proc/exec2
        proc/exec2.c
        proc/fork1
        proc/fork1.c
        proc/fork2
        proc/fork2.c
        proc/freebsd.mk
        proc/linux.mk
        proc/macos.mk
        proc/pracct
        proc/pracct.c
        proc/pruids
        proc/pruids.c
        proc/shell1
        proc/shell1.c
        proc/shell2
        proc/shell2.c
        proc/solaris.mk
        proc/system.c
        proc/system.o
        proc/systest1
        proc/systest1.c
        proc/systest1.o
        proc/systest2
        proc/systest2.c
        proc/systest2.o
        proc/systest3
        proc/systest3.c
        proc/tellwait1
        proc/tellwait1.c
        proc/tellwait2
        proc/tellwait2.c
        proc/test1
        proc/test1.c
        proc/times1
        proc/times1.c
        proc/vfork1
        proc/vfork1.c
        proc/vfork3
        proc/vfork3.c
        proc/wait1
        proc/wait1.c
        proc/zombie
        proc/zombie.c
        pty/driver.c
        pty/driver.o
        pty/freebsd.mk
        pty/linux.mk
        pty/loop.c
        pty/loop.o
        pty/macos.mk
        pty/main.c
        pty/main.o
        pty/pty
        pty/solaris.mk
        sess/freebsd.mk
        sess/linux.mk
        sess/macos.mk
        sess/orphan3
        sess/orphan3.c
        sess/solaris.mk
        signals/abort.c
        signals/abort.o
        signals/child.c
        signals/critical
        signals/critical.c
        signals/freebsd.mk
        signals/linux.mk
        signals/macos.mk
        signals/mask
        signals/mask.c
        signals/read1
        signals/read1.c
        signals/read2
        signals/read2.c
        signals/reenter
        signals/reenter.c
        signals/setops.c
        signals/sigtstp
        signals/sigtstp.c
        signals/sigusr
        signals/sigusr.c
        signals/sleep1.c
        signals/sleep1.o
        signals/sleep2.c
        signals/sleep2.o
        signals/solaris.mk
        signals/suspend1
        signals/suspend1.c
        signals/suspend2
        signals/suspend2.c
        signals/system.c
        signals/system.o
        signals/tsleep2
        signals/tsleep2.c
        signals/tsleep2.o
        sockets/bindunix
        sockets/bindunix.c
        sockets/bo
        sockets/bo.c
        sockets/clconn.c
        sockets/clconn.o
        sockets/cliconn.c
        sockets/cliconn.o
        sockets/findsvc
        sockets/findsvc.c
        sockets/freebsd.mk
        sockets/initsrv1.c
        sockets/initsrv1.o
        sockets/initsrv2.c
        sockets/initsrv2.o
        sockets/linux.mk
        sockets/macos.mk
        sockets/recvfd.c
        sockets/recvfd.o
        sockets/recvfd2.c
        sockets/ruptime
        sockets/ruptime-dg
        sockets/ruptime-dg.c
        sockets/ruptime.c
        sockets/ruptime.o
        sockets/ruptimed
        sockets/ruptimed-dg
        sockets/ruptimed-dg.c
        sockets/ruptimed-dg.o
        sockets/ruptimed-fd
        sockets/ruptimed-fd.c
        sockets/ruptimed-fd.o
        sockets/ruptimed.c
        sockets/ruptimed.o
        sockets/sendfd.c
        sockets/sendfd.o
        sockets/sendfd2.c
        sockets/servaccept.c
        sockets/servaccept.o
        sockets/servlisten.c
        sockets/servlisten.o
        sockets/solaris.mk
        sockets/spipe.c
        sockets/spipe.o
        std/conf
        std/conf.c
        std/conf.c.modified
        std/freebsd.mk
        std/linux.mk
        std/macos.mk
        std/makeconf.awk
        std/makeopt.awk
        std/options
        std/options.c
        std/pathconf.sym
        std/pathopt.sym
        std/solaris.mk
        std/sysconf.sym
        std/sysopt.sym
        stdio/buf
        stdio/buf.c
        stdio/freebsd.mk
        stdio/linux.mk
        stdio/macos.mk
        stdio/solaris.mk
        stdio/tempfiles
        stdio/tempfiles.c
        stdio/tempnam
        stdio/tempnam.c
        streams/cliconn.c
        streams/freebsd.mk
        streams/isastream.c
        streams/linux.mk
        streams/macos.mk
        streams/ptyopen.c
        streams/recvfd.c
        streams/sendfd.c
        streams/servaccept.c
        streams/servlisten.c
        streams/solaris.mk
        streams/spipe.c
        streams/strlist.c
        streams/t_isastream.c
        termios/csize
        termios/csize.c
        termios/ctermid.c
        termios/ctermid.o
        termios/freebsd.mk
        termios/getpass.c
        termios/getpass.o
        termios/isatty.c
        termios/isatty.o
        termios/linux.mk
        termios/macos.mk
        termios/settty
        termios/settty.c
        termios/solaris.mk
        termios/t_getpass
        termios/t_getpass.c
        termios/t_getpass.o
        termios/t_isatty
        termios/t_isatty.c
        termios/t_isatty.o
        termios/t_raw
        termios/t_raw.c
        termios/t_ttyname
        termios/t_ttyname.c
        termios/t_ttyname.o
        termios/ttyname.c
        termios/ttyname.o
        termios/winch
        termios/winch.c
        threadctl/atfork
        threadctl/atfork.c
        threadctl/detach.c
        threadctl/detach.o
        threadctl/freebsd.mk
        threadctl/getenv1.c
        threadctl/getenv1.o
        threadctl/getenv2.c
        threadctl/getenv2.o
        threadctl/getenv3.c
        threadctl/getenv3.o
        threadctl/linux.mk
        threadctl/macos.mk
        threadctl/solaris.mk
        threadctl/suspend
        threadctl/suspend.c
        threadctl/timeout
        threadctl/timeout.c
        threadctl/timeout.o
        threads/badexit2
        threads/badexit2.c
        threads/cleanup
        threads/cleanup.c
        threads/condvar.c
        threads/condvar.o
        threads/exitstatus
        threads/exitstatus.c
        threads/freebsd.mk
        threads/linux.mk
        threads/macos.mk
        threads/mutex1.c
        threads/mutex1.o
        threads/mutex2.c
        threads/mutex2.o
        threads/mutex3.c
        threads/mutex3.o
        threads/rwlock.c
        threads/rwlock.o
        threads/solaris.mk
        threads/threadid
        threads/threadid.c
        CMakeLists.txt
        DISCLAIMER
        fig1.10
        fig1.3
        fig1.4
        fig1.5
        fig1.6
        fig1.7
        fig1.8
        fig1.9
        fig10.10
        fig10.11
        fig10.12
        fig10.14
        fig10.15
        fig10.18
        fig10.19
        fig10.2
        fig10.20
        fig10.22
        fig10.23
        fig10.24
        fig10.25
        fig10.26
        fig10.28
        fig10.29
        fig10.30
        fig10.5
        fig10.6
        fig10.7
        fig10.8
        fig10.9
        fig11.10
        fig11.11
        fig11.12
        fig11.13
        fig11.14
        fig11.2
        fig11.3
        fig11.4
        fig11.5
        fig12.11
        fig12.12
        fig12.13
        fig12.16
        fig12.17
        fig12.4
        fig12.8
        fig13.1
        fig13.6
        fig13.7
        fig13.8
        fig14.1
        fig14.12
        fig14.16
        fig14.17
        fig14.18
        fig14.19
        fig14.29a
        fig14.29b
        fig14.32
        fig14.5
        fig14.6
        fig14.7
        fig14.9
        fig15.11
        fig15.12
        fig15.14
        fig15.15
        fig15.17
        fig15.18
        fig15.19
        fig15.31
        fig15.33
        fig15.5
        fig15.6
        fig15.7
        fig16.10
        fig16.14
        fig16.15
        fig16.16
        fig16.17
        fig16.18
        fig16.20
        fig16.8
        fig16.9
        fig17.10
        fig17.11
        fig17.12
        fig17.13
        fig17.14
        fig17.15
        fig17.16
        fig17.17
        fig17.19
        fig17.20
        fig17.21
        fig17.22
        fig17.23
        fig17.24
        fig17.25
        fig17.26
        fig17.27
        fig17.28
        fig17.29
        fig17.30
        fig17.31
        fig17.32
        fig17.33
        fig17.34
        fig17.35
        fig17.36
        fig17.37
        fig17.38
        fig17.39
        fig17.4
        fig17.40
        fig17.6
        fig18.10
        fig18.11
        fig18.12
        fig18.13
        fig18.14
        fig18.15
        fig18.16
        fig18.17
        fig18.18
        fig18.20
        fig18.21
        fig18.22
        fig19.10
        fig19.11
        fig19.12
        fig19.13
        fig19.17
        fig19.8
        fig19.9
        fig2.12
        fig2.13
        fig2.15
        fig2.16
        fig20.3
        fig3.1
        fig3.10
        fig3.11
        fig3.2
        fig3.4
        fig4.12
        fig4.16
        fig4.21
        fig4.22
        fig4.23
        fig4.24
        fig4.25
        fig4.3
        fig4.8
        fig4.9
        fig5.11
        fig5.12
        fig5.13
        fig5.4
        fig5.5
        fig6.2
        fig7.1
        fig7.11
        fig7.13
        fig7.14
        fig7.16
        fig7.3
        fig7.4
        fig7.9
        fig8.1
        fig8.12
        fig8.13
        fig8.16
        fig8.17
        fig8.20
        fig8.21
        fig8.22
        fig8.23
        fig8.24
        fig8.25
        fig8.28
        fig8.29
        fig8.3
        fig8.30
        fig8.5
        fig8.6
        fig8.8
        fig9.11
        figB.1
        figB.3
        figB.4
        figC.1
        figC.11
        figC.12
        figC.13
        figC.14
        figC.15
        figC.16
        figC.17
        figC.18
        figC.20
        figC.21
        figC.3
        figC.4
        figC.5
        figC.6
        figC.7
        figC.9
        Make.defines.freebsd
        Make.defines.linux
        Make.defines.macos
        Make.defines.solaris
        Makefile
        README
        systype.sh)

add_executable(apue ${SOURCE_FILES})